Issue #3359: small highcontrast color fixes

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Form.css
@@ -78,7 +78,7 @@ div.InputField_Selection div.Text,
 /**
  * @subsection  Form
  */
-.FieldExplanation {
+.SidebarColumn .FieldExplanation {
     color: var(--colTextDark);
 }
 
